# kcs

./: .gitignore  INSTALL  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-testing.yml
config/: areas.toml  cmip.toml  config-split.toml  config.toml  data.toml  extra_data.toml  penalties.toml  plotting.toml  readnestedcfg.py  resampling.toml  scenarios.toml  statistics.toml  variables.toml
docs/: guide.rst  requirements.txt
docs/source/: conf.py  config.rst  extras.rst  index.rst  script.rst  usage.rst
etc/: conda-environment.yml
extras/: penalties.toml  percentile-all.bash  ranges.toml  resample-all.bash  resample-and-plot-all.bash  runall.bash  single-script.py  step2.toml
kcs/: __init__.py  steering.py  types.py
kcs/change_perc/: __init__.py  __main__.py  core.py  plot.py  runall.py
kcs/cmip/: calcpercs.py  distribution.py  plotting.py
kcs/config/: __init__.py  __main__.py  default.py
kcs/ecearth/: __init__.py  __main__.py  extract.py
kcs/extraction/: __init__.py  __main__.py  core.py
kcs/percentiles/: __main__.py
kcs/plotting/: __init__.py  percentiles.py  resamples.py
kcs/resample/: __init__.py  __main__.py  core.py
kcs/resampling/: __init__.py
kcs/steering/: __init__.py  __main__.py  core.py  plot.py  plotting.py
kcs/tas_change/: __init__.py  __main__.py  core.py  extract.py  plot.py  plotting.py  tempvstime.py
kcs/utils/: __init__.py  argparse.py  atlist.py  attributes.py  constraints.py  coord.py  date.py  io.py  logging.py  matching.py
ksc/cmip/: extract.py  tempvstime.py
ksc/ecearth/: extract.py
ksc/percentiles/: __main__.py
ksc/plotting/: plotting.py
ksc/resampling/: __main__.py
ksc/utils/: coord.py  date.py  io.py
